# Cattlelog

./: README.md  STAGING_SETUP.md  WORKFLOW.md  docker-compose.airflow.yml
backend/: .dockerignore  .env.example  .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements-server.txt  requirements.txt  using-uv.md
backend/database_management/: compute_gap_scripts.sql  create_tables.py  load_catalog_courses.py  load_to_db.py
backend/database_management/Documentation/: DATABASE_README.md  LOAD_DATA_README.md
backend/database_management/SQL-Scripts/: 1_adding_grade_to_classes_professors.sql  1_adding_grade_to_classes_professors_backout.sql  2_adding_review_and_titles_to_classes_professors_backout.sql  2_adding_reviews_and_titles_to_classes_professors.sql  adding_average_gpa_to_courses.sql  adding_average_gpa_to_courses_backout.sql  adding_review_to_classes_professors.sql  adding_review_to_classes_professors_backout.sql  adding_slugs_to_grades_table_from_professors.sql  adding_tags_to_professors.sql  adding_tags_to_professors_backout.sql  averaging_ratings.sql  check_duplicate_professors.sql  compute_course_gpa.sql  delete_duplicate_professors.sql  fix_professor_ids_from_slugs.py  inserting_new_profs_from_grade_dist.sql  list_prof_dups.txt  (+4 more)
backend/server/: database.py  models.py  requirements.txt  routes.py  utils.py
backend/tests/: test_all_course_logic.py  test_grade_dist.py  test_professor_logic.py  test_single_course_logic.py  test_utils.py
neptune/: Cargo.toml  Dockerfile
neptune/src/: course.rs  courses.rs  fetcher.rs  grade.rs  main.rs
(+236 files in other folders)
