[project]
name = "backend"
version = "0.1.0"
description = "Cattlelog's backend server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.121.2",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "httptools>=0.7.1",
    "kronicler>=0.1.3",
    "langchain-google-genai>=2.0.10",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pgvector>=0.4.1",
    "playwright>=1.56.0",
    "posthog>=7.0.1",
    "psycopg2>=2.9.11",
    "pyspark>=4.0.1",
    "pytest>=9.0.1",
    "redis[hiredis]>=7.0.1",
    "ruff>=0.14.5",
    "selenium>=4.38.0",
    "sqlalchemy>=2.0.44",
    "starlette>=0.47.3",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
    "webdriver-manager>=4.0.2",
]
