[package]
name = "neptune"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
once_cell = "1.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
whirlwind = "0.1.1"
serde_json = "1.0.140"
reqwest = "0.12.22"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
